# oscillator-example

./: .gitignore  README.md  mypy.ini
acceleration/: README.md  mass-spring.py  precice-config-0.04-QN.xml  precice-config-0.04-UR.xml  precice-config-0.04-rQN.xml
monolithic/: README.md  convergence_study.sh  doConvergenceStudy.py  make-venv.sh  monolithic.py  monolithic_rk4.py  oscillator.py  output.py  requirements.txt
multirate/: README.md  convergence-study.sh  doConvergenceStudy.py  make-venv.sh  mass-spring-substeps.py  mass-spring.py  oscillator.py  precice-config-template.xml  requirements.txt
precice-2/: convergence_study.sh  doConvergenceStudy.py  make-venv.sh  mass-spring.py  oscillator.py  precice-config-template.xml  requirements.txt
precice-3/: README.md  convergence_study.sh  doConvergenceStudy.py  make-venv.sh  mass-spring.py  oscillator.py  precice-config-template.xml  requirements.txt
quasi-newton/: mass-spring.py  precice-config-0.04.xml
tooling/: README.md  pyproject.toml  setup.py
tooling/brot/: __init__.py  enums.py  interpolation.py  oscillator.py  output.py  timeSteppersMonolithic.py  timesteppers.py
tooling/src/brot/: interpolation.py  oscillator.py  output.py  timeSteppers.py  timeSteppersMonolithic.py  timesteppers.py
waveform/: convergence_study.sh  doConvergenceStudy.py  mass-spring.py  mass-spring_cubic.py  mass-spring_rk4.py  mass-spring_rk4_cubic.py  oscillator.py  precice-config-0.005-cubic.xml  precice-config-0.005.xml  precice-config-0.01.xml  precice-config-hermite-template.xml  precice-config-template.xml  (+1 more)
(+64 files in other folders)
